--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Site settings
-title:       Silas Reinagel
-email:       silas.reinagel@gmail.com
-author:      Silas Reinagel
-description: "Extreme Software Engineering Blog"
+title:       Noah Reinagel
+email:       noah.r9@gmail.com
+author:      Noah Reinagel
+description: ""
 baseurl:     ""
-url:         "http://www.silasreinagel.com"
+url:         "http://www.noahreinagel.com"
 date_format: "%b %-d, %Y"
 
 # Google services
 google_verification:
 # Use either direct GA implementation or set up GTM account
 # - using both will skew your data (leave blank to not use at all)
-google_analytics: UA-93176410-1
+google_analytics: 
 google_tag_manager:
 # Bing services
 bing_verification:
@@ -41,14 +41,14 @@ facebook_appid:
 facebook_comments_number: 10
 
 # Social icons
-github_username: silasreinagel
-bitbucket_username:
-stackoverflow_id: 4009517
-twitter_username: theoconfidor
+github_username: zavixdragon
+bitbucket_username: 
+stackoverflow_id: 5286632
+twitter_username: R9Noah
 skype_username:
 steam_nickname:
 google_plus_id:
-linkedin_username: silasreinagel
+linkedin_username: noah-reinagel-6577a2114
 angellist_username:
 medium_id:
 bitcoin_url:
